# Generic-Coder

./: GETTING_STARTED.md  README.md  TMWebDriver.py  WECHAT_ARTICLE_GENERIC_CODER.md  agentmain.py  build_installer.py  ga.py  launch.pyw  launch.sh  llmcore.py  media_handler.py  pyproject.toml  remoteserver.py  workspace.py
assets/: install-macos-app.sh  install-windows-app.bat  tools_schema.json
assets/generic_coder/: app.css  app.js  index.html
frontends/: generic_coder_web.py  standalone_app.py  stapp_enhanced.py  themes.py
