# AI install hint: choose deps by OS/env + needed ui/bot. do NOT install all.
# minimal core first; missing packages can be installed on demand.

[project]
name = "generic-coder"
version = "0.1.0"
description = "Generic Coder autonomous development cockpit"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "bottle>=0.12",
    "simple-websocket-server>=0.4",
]

[project.optional-dependencies]
web = []
desktop = [
    "pywebview>=4.0",
]
ui = [
    "pywebview>=4.0",
]
all-frontends = [
    "python-telegram-bot>=20.0",
    "qq-botpy>=1.0",
    "pycryptodome>=3.19",
    "qrcode>=7.4",
    "lark-oapi>=1.0",
    "wecom-aibot-sdk>=1.0",
    "dingtalk-stream>=0.20",
]
workspace = [
    "watchfiles>=0.20",
]
remote = [
    "paramiko>=3.0",
]
media = [
    "Pillow>=10.0",
    "PyPDF2>=3.0",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]
installer = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agent_loop",
    "agentmain",
    "build_installer",
    "ga",
    "llmcore",
    "media_handler",
    "remoteserver",
    "simphtml",
    "TMWebDriver",
    "workspace",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["frontends*", "memory*", "plugins*", "reflect*"]
namespaces = true